--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -1,6 +1,16 @@
 imports:
     - { resource: config.yml }
 
+doctrine:
+    dbal:
+        driver:   pdo_mysql
+        host:     "%database_host%"
+        port:     "%database_port%"
+        dbname:   "%database_name%"
+        user:     "%database_user%"
+        password: "%database_password%"
+        charset:  UTF8
+
 framework:
     router:
         resource: "%kernel.root_dir%/config/routing_dev.yml"
