--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,10 +1,10 @@
 # This file is auto-generated during the composer install
 parameters:
-    database_host: 127.0.0.1
-    database_port: null
-    database_name: symfony
+    database_host: akworks.cvmddzl0rurt.us-west-2.rds.amazonaws.com
+    database_port: 3306
+    database_name: akvworks
     database_user: root
-    database_password: null
+    database_password: LNatsir7
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
